# initshim

./: .gitignore  Android.bp  CMakeLists.txt
include/: debug_config.h  drm.h
src/: drm.c  main.c
